--- a/src/components/UI/Loader/Loader.module.scss
+++ b/src/components/UI/Loader/Loader.module.scss
@@ -104,14 +104,25 @@ $color-white: rgb(218, 221, 231);
    align-items: center;
    justify-content: center;
    background-color: #09111bd2;
-   z-index: 50;
+   z-index: 100;
+   display: flex;
+   flex-direction: column;
+   gap: 10px;
+   color: white;
+
+   h1{
+    margin: 30px 0 0 0;
+   }
+   h2, h3{
+    margin: 0;
+    opacity: 0.6;
+   }
 
    .loader {
       transform: scale(1.3);
       width: 175px;
       height: 80px;
       display: block;
-      margin: auto;
       background-image: radial-gradient(circle 25px at 25px 25px, $color-white 100%, transparent 0), radial-gradient(circle 50px at 50px 50px, $color-white 100%, transparent 0), radial-gradient(circle 25px at 25px 25px, $color-white 100%, transparent 0), linear-gradient($color-white 50px, transparent 0);
       background-size: 50px 50px, 100px 76px, 50px 50px, 120px 40px;
       background-position: 0px 30px, 37px 0px, 122px 30px, 25px 40px;
