--- a/src/App.css
+++ b/src/App.css
@@ -52,3 +52,9 @@ table a{
    align-items: center;
    justify-content: center;
 }
+
+@media screen and (max-width: 768px) {
+   .container{
+      padding: 0 15px;
+   }
+}
