--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -5,8 +5,8 @@
    background: #363636;
    color: #fff;
    .box{
-      padding-top: 10px;
-      height: 100px;
+      padding: 30px 0 20px 0;
+      min-height: 80px;
       display: grid;
       grid-template-columns: repeat(3, 1fr);
 
