--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -4,8 +4,10 @@ header{
    .nav{
       display: flex;
       justify-content: space-between;
+      flex-wrap: wrap;
       color: white;
       z-index: 5;
+      min-height: 60px;
 
       ul{
          display: flex;
@@ -157,6 +159,113 @@ header{
             font-weight: 300;
             text-align: center;
             text-shadow: 0 0 1px #fff;
+         }
+      }
+   }
+}
+
+
+//toggler
+
+.toggler{
+   display: none;
+} 
+
+.menu_btn{
+   display: none;
+   width: 40px;
+   height: 60px;
+   position: relative;
+   z-index: 2;
+
+   span{
+
+      width: 40px;
+      height: 2px;
+      position: absolute;
+      background: white;
+      transition: all 1s;
+   }
+   span:nth-of-type(2) {
+      top: calc(50% - 12px);
+   }
+   span:nth-of-type(3) {
+      top: calc(50% + 10px);
+   }
+}
+
+
+@media screen and (max-width: 768px){
+
+   //toggler
+   .menu_btn{
+      display: inline-flex;
+      align-items: center;
+      cursor: pointer;
+      order: 1;
+   }
+
+   .menu_btn.active > span:nth-of-type(1){
+      opacity: 0;
+      transition: all 0.5s;
+   }
+   .menu_btn.active > span:nth-of-type(2){
+      transition: all 0.5s;
+      transform: rotate(45deg);
+      top: 25px;
+   }
+   .menu_btn.active > span:nth-of-type(3){
+      transition: all 0.5s;
+      transform: rotate(-45deg);
+      top: 25px;
+   }
+
+   .menu{
+      max-height: 0;
+   }
+
+   .menu.active{
+      max-height: 100vh;
+   }
+
+   header{
+      .nav{
+
+         .box_input{
+            padding: 9px 15px 9px 0;
+         }
+         .menu{
+            width: 100%;
+            overflow: hidden;
+            order: 2;
+            transition: all 1s ease-out;
+            ul{
+               flex-direction: column;
+               align-items: center;
+            }
+         }
+      }
+      .box_img{
+         .box{
+            .title{
+               padding: 0 10px;
+               font-size: 38px;
+               line-height: 48px;
+            }
+         }
+      }
+   }
+}
+
+@media screen and (max-width: 480px){
+   header{
+      .box_img{
+         .box{
+            .title{
+               padding: 0 10px;
+               font-size: 30px;
+               line-height: 38px;
+            }
          }
       }
    }
