--- a/src/pages/BookPage/BookPage.module.scss
+++ b/src/pages/BookPage/BookPage.module.scss
@@ -11,13 +11,10 @@
 .book{
    margin: 40px 0;
    display: grid;
-   grid-template-columns: 1fr 3fr;
-   min-height: 500px;
+   grid-template-columns: 340px 3fr;
+   min-height: 400px;
    gap: 60px;
    .image{
-      img{
-         border-radius: 10px;
-      }
       .loader_img{
          border-radius: 10px;
       }
@@ -53,5 +50,12 @@
          gap: 20px;
       }
 
+   }
+}
+
+@media screen and (max-width: 960px){
+   .book{
+      grid-template-columns: 280px 3fr;
+      gap: 40px;
    }
 }
