--- a/src/components/Filter/Filter.module.scss
+++ b/src/components/Filter/Filter.module.scss
@@ -1,10 +1,9 @@
 
 .filter{
-   // border: 2px solid #1C3A60;
    padding: 20px;
    display: flex;
    flex-direction: column;
-   gap: 30px;
+   gap: 20px;
 
    h2{
       margin-block: 22px 0;
@@ -17,22 +16,45 @@
       }
    }
 
-   .title{
-      display: flex;
-      align-items: center;
-      gap: 5px;
-      text-transform: uppercase;
-      margin-block: 0 10px;
-      cursor: pointer;
-      svg{
-         font-size: 0.9rem;
-         color: #1C3A60CC;
-      }
-   }
-   .filter_box{
-      margin-left: 10px;
+   .menu_filter{
+      // border: 2px solid #1C3A60;
       display: flex;
       flex-direction: column;
-      gap: 5px;
+      gap: 20px;
+
+      .title{
+         display: flex;
+         align-items: center;
+         gap: 5px;
+         text-transform: uppercase;
+         margin-block: 0 10px;
+         cursor: pointer;
+         svg{
+            font-size: 0.9rem;
+            color: #1C3A60CC;
+         }
+      }
+      .filter_box{
+         margin-left: 10px;
+         display: flex;
+         flex-direction: column;
+         gap: 5px;
+      }
    }
+}
+
+@media screen and (max-width: 768px){
+   .filter{
+      h2{
+         margin-block: 5px 0;
+      }
+      .menu_filter{
+         display: grid;
+         grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+         .title{
+            margin-block: 0 5px;
+         }
+      }
+   }
+
 }
