--- a/src/pages/BookPage/BookPage.module.scss
+++ b/src/pages/BookPage/BookPage.module.scss
@@ -39,7 +39,7 @@
          }
       }
       h1{
-         margin: 30px 0 0 0;
+         margin: 0;
       }
       p{
          margin: 0;
@@ -51,6 +51,24 @@
          gap: 20px;
       }
 
+   }
+}
+
+.breadcrumb{
+   display: flex;
+   align-items: center;
+   gap: 10px;
+   list-style: none;
+   margin: 10px 0;
+   padding: 0;
+
+   a{
+      color: #1C3A60;
+      border-bottom: 2px solid  #1C3A60BB;
+   }
+
+   .last{
+      opacity: 0.7;
    }
 }
 
@@ -74,7 +92,7 @@
       .book_info{
          margin: 0 20px;
          h1{
-            margin: 20px 0 0 0;
+            text-align: center;
          }
          .buttons{
             width: 100%;
@@ -87,7 +105,6 @@
 @media screen and (max-width: 480px){
    .book{
       grid-template-columns: 1fr;
-      gap: 40px;
       .image{
          max-width: auto;
          margin: 0 30px;
