--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -139,6 +139,7 @@ header{
       }
 
       .box{
+         padding: 0 0 0 10px;
          position: absolute;
          display: flex;
          justify-content: center;
