--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -242,6 +242,17 @@ header{
             ul{
                flex-direction: column;
                align-items: center;
+               li{
+                  box-sizing: border-box;
+                  list-style: none;
+                  width: 100%;
+      
+                  .link_button{
+                     box-sizing: border-box;
+                     width: 100%;
+                     text-align: center;
+                  }
+               }
             }
          }
       }
