--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,12 @@
    /* font-family: Montserrat, sans-serif; */
    font-family: "Roboto", Helvetica, Arial, sans-serif;
 }
+html{
+   font-size: 16px;
+}
 body{
    margin: 0;
    padding: 0;
-   font-size: 18px;
 }
 
 h3{
